# Project_OOP

./: CMakeLists.txt  OOP_Project_phase1.cpp
src/: OOP_Project_phase1.cpp  imageItem.cpp  path_utils.h  qcustomplot.h  wire.cpp  wire.h
